--- a/Sphero Squared/Sphero Squared.csproj
+++ b/Sphero Squared/Sphero Squared.csproj
@@ -98,6 +98,7 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="ComboboxRobot.cs" />
     <Compile Include="SpheroController.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
